applications/mindspore-summary-new/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: mindspore-summary-new
  name: mindspore-summary-new
