applications/mindspore-summary-new/mindspore-summary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mindspore-summary-service
  namespace: mindspore-summary-new
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: mindspore-summary
  type: ClusterIP
